--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper fullscreen fade-up">
 						<div class="inner">
-							<h1>Small Galaxies, Cosmic Questions</h1>
-							<p>Durham University, 29th July &ndash; 2nd August 2019</p>
-							<center><img src="images/durham-university.png" alt="Durham University logo">
+							<!-- <h1>Small Galaxies, Cosmic Questions</h1> -->
+							<p>Durham University<br>29th July &ndash; 2nd August 2019</p>
+<!--							<center><img src="images/durham-university.png" alt="Durham University logo">
 								<a href="http://astro.dur.ac.uk/Cosmology/" class="image"><img src="images/CEA.jpg" alt="" height="96px"/></a>
 								<a href="http://icc.dur.ac.uk/" class="image"><img src="images/headerICC.jpg" alt=""  height="96px"/></a></center>
+-->
 						</div>
 					</section>
 
@@ -89,7 +90,7 @@
 							<table>
 								<tbody>
 									<tr>
-										<td style="text-align: center;">1st January 2019</td>
+										<td style="text-align: center;">15th January 2019</td>
 										<td>Pre-registration/abstract submission opens</td>
 									</tr>
 									<tr>
