--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 						<ul>
 							<li><a href="#intro">Small Galaxies,<br />Cosmic Questions</a></li>
 							<li><a href="#questions">Scientific Rationale</a></li>
+							<li><a href="#organisers">Organisers</a></li>
 							<li><a href="#dates">Important dates</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
@@ -48,6 +49,13 @@
 						<div class="inner">
 							<!-- <h1>Small Galaxies, Cosmic Questions</h1> -->
 							<p>Durham University<br>29th July &ndash; 2nd August 2019</p>
+							<p>Image Credit:<br>
+								<a href="http://www.stsci.edu/who-we-are/leadership/alessandra-aloisi">Alessandra Aloisi</a>,<br>
+								<a href="http://rcookeast.wixsite.com/home">Ryan Cooke</a>,<br>
+								<a href="https://www.dur.ac.uk/research/directory/staff/?mode=staff&id=16397">Azadeh Fattahi</a>,<br>
+								<a href="https://blogs.helsinki.fi/sawala/">Till Sawala</a>,<br>
+								<a href="http://www.astro.ljmu.ac.uk/~astathob/">Adrien Thob</a>.
+							</p>
 <!--							<center><img src="images/durham-university.png" alt="Durham University logo">
 								<a href="http://astro.dur.ac.uk/Cosmology/" class="image"><img src="images/CEA.jpg" alt="" height="96px"/></a>
 								<a href="http://icc.dur.ac.uk/" class="image"><img src="images/headerICC.jpg" alt=""  height="96px"/></a></center>
@@ -78,6 +86,39 @@
 							highlight the principle open issues, and to discuss the future observational and theoretical advances that are needed
 							to make progress.
 							Contributions will be in the form of long and short presentations, as well as active discussion sessions.</p>
+						</div>
+					</section>
+
+				<!-- Organisers -->
+					<section id="organisers" class="wrapper style4-alt spotlights">
+						<div class="inner">
+							<div class="split">
+								<section>
+									<h3>Scientific Organising Committee</h3>
+									<p><a href="https://lavinia.as.arizona.edu/~gbesla/Welcome.html">Gurtina Besla</a> (University of Arizona)<br />
+									<a href="https://astromichelle.wordpress.com/">Michelle Collins</a> (University of Surrey)<br />
+									<a href="http://rcookeast.wixsite.com/home">Ryan Cooke</a> (Durham University)<br />
+									<a href="http://alisdeason.wixsite.com/home">Alis Deason</a> (Durham University)<br />
+									<a href="https://www.dur.ac.uk/physics/staff/profiles/?id=536">Carlos Frenk</a> (Durham University)<br />
+									<a href="http://www.cosmocrunch.co.uk/">Andrew Pontzen</a> (University College London)<br />
+									<a href="http://astro.ucr.edu/members/faculty/bsiana/">Brian Siana</a> (University of California Riverside)<br />
+									<a href="https://www.astro.rug.nl/~etolstoy/">Eline Tolstoy</a> (University of Groningen)<br />
+									</p>
+								</section>
+<!--
+								<section>
+									<h3>Local Organising Committee</h3>
+									<p><a href="http://rcookeast.wixsite.com/home">Ryan Cooke</a> (co-chair; Durham University)<br />
+									<a href="http://alisdeason.wixsite.com/home">Alis Deason</a> (co-chair; Durham University)<br />
+									Person A<br />
+									Person B<br />
+									Person C<br />
+									Person D<br />
+									Person E<br />
+									</p>
+								</section>
+-->
+							</div>
 						</div>
 					</section>
 
