--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
 
 				<!-- Organisers -->
 					<section id="organisers" class="wrapper style4-alt spotlights">
-						<div class="inner">
-							<div class="split">
-								<section>
+						<section>
+							<a class="image"><img src="images/SOCcollage.png" alt="" data-position="center center" width=100%/></a>
+							<div class="content">
+								<div class="inner">
 									<h3>Scientific Organising Committee</h3>
 									<p><a href="https://lavinia.as.arizona.edu/~gbesla/Welcome.html">Gurtina Besla</a> (University of Arizona)<br />
 									<a href="https://astromichelle.wordpress.com/">Michelle Collins</a> (University of Surrey)<br />
@@ -104,22 +105,9 @@
 									<a href="http://astro.ucr.edu/members/faculty/bsiana/">Brian Siana</a> (University of California Riverside)<br />
 									<a href="https://www.astro.rug.nl/~etolstoy/">Eline Tolstoy</a> (University of Groningen)<br />
 									</p>
-								</section>
-<!--
-								<section>
-									<h3>Local Organising Committee</h3>
-									<p><a href="http://rcookeast.wixsite.com/home">Ryan Cooke</a> (co-chair; Durham University)<br />
-									<a href="http://alisdeason.wixsite.com/home">Alis Deason</a> (co-chair; Durham University)<br />
-									Person A<br />
-									Person B<br />
-									Person C<br />
-									Person D<br />
-									Person E<br />
-									</p>
-								</section>
--->
+								</div>
 							</div>
-						</div>
+						</section>
 					</section>
 
 					<!-- Dates -->
