--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 							<li><a href="#organisers">Organisers</a></li>
 							<li><a href="#code">Code of Conduct</a></li>
 							<li><a href="#dates">Important dates</a></li>
+							<li><a href="#delegates">Confirmed Participants</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</nav>
@@ -187,6 +188,37 @@
 								</tbody>
 							</table>
 						</div>
+						</div>
+					</section>
+
+					<!-- Delegates-->
+					<section id="delegates" class="wrapper style1 fade-up">
+						<div class="inner">
+							<h2>Confirmed Participants</h2>
+							<div class="split style2">
+								<!-- First column -->
+								<section>
+									<li>Giuseppina Battaglia (Instituto de Astrofisica de Canarias)
+									<li>Vasily Belokurov (IoA, University of Cambridge)
+									<li>Ana Bonaca (CfA, Harvard University)
+									<li>Alyson Brooks (Rutgers University)
+									<li>Dawn Erb (University of Wisconsin-Milwaukee)
+									<li>Anna Frebel (MIT)
+									<li>Marla Geha (Yale University)
+									<li>Alex Ji (Carnegie Observatories)
+								</section>
+								<!-- Second column -->
+								<section>
+									<li>Nitya Kallivayalil (University of Virginia)
+									<li>Claudia Scarlata (University of Minnesota)
+									<li>Dan Stark (The University of Arizona)
+									<li>Else Starkenburg (Leibniz-Institut fur Astrophysik Potsdam)
+									<li>Louis Strigari (Texas A&M University)
+									<li>Dan Weisz (University of California Berkeley)
+									<li>Andrew Wetzel (University of California Davis)
+									<li>John Wise (Georgia Institute of Technology)
+								</section>
+							</div>
 						</div>
 					</section>
 
