--- a/index.html
+++ b/index.html
@@ -137,9 +137,10 @@
                                 the organizers without a refund of any charge.
                                 <br><br>
                                 Any participant who wishes to report a violation of this policy is asked to speak, in confidence,
-                                to either Ryan Cooke (<a href="mailto:ryan.j.cooke@durham.ac.uk">ryan.j.cooke@durham.ac.uk</a>) or
-                                Alis Deason (<a href="mailto:alis.j.deason@durham.ac.uk">alis.j.deason@durham.ac.uk</a>).
-                            </p>
+                                to either Ryan Cooke (<a href="mailto:ryan.j.cooke@durham.ac.uk">ryan.j.cooke@durham.ac.uk</a>),
+                                Alis Deason (<a href="mailto:alis.j.deason@durham.ac.uk">alis.j.deason@durham.ac.uk</a>), or any
+                                member of the SOC.
+							</p>
                             <hr>
 							<h3>Acknowledgement</h3>
 							<p>This code of conduct is based on the "London Code of Conduct", as originally designed for
