--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 									<li>Giuseppina Battaglia (Instituto de Astrofisica de Canarias)
 									<li>Vasily Belokurov (IoA, University of Cambridge)
 									<li>Ana Bonaca (CfA, Harvard University)
+									<li>Sownak Bose (CfA, Harvard University)
 									<li>Alyson Brooks (Rutgers University)
 									<li>Dawn Erb (University of Wisconsin-Milwaukee)
 									<li>Anna Frebel (MIT)
