--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 							<li><a href="#code">Code of Conduct</a></li>
 							<li><a href="#dates">Important dates</a></li>
 							<li><a href="#delegates">Confirmed Participants</a></li>
+							<li><a href="#submit">Abstract Submission</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</nav>
@@ -193,7 +194,7 @@
 					</section>
 
 					<!-- Delegates-->
-					<section id="delegates" class="wrapper style1 fade-up">
+					<section id="delegates" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h2>Confirmed Participants</h2>
 							<div class="split style2">
@@ -224,8 +225,19 @@
 						</div>
 					</section>
 
+					<!-- Abstract Submission/Registration -->
+					<section id="submit" class="wrapper style4 fade-up">
+						<div class="inner">
+							<h2>Abstract Submission is open!</h2>
+                            <hr>
+							<p>Please submit a title and abstract of your talk at <a href="https://www.dur.ac.uk/event.durham/eventmanagement/abstracts/smallgalaxies/">this link</a>
+							</p>
+						</div>
+					</section>
+
+
 				<!-- Contact -->
-					<section id="contact" class="wrapper style4 fade-up">
+					<section id="contact" class="wrapper style2 fade-up">
 						<div class="inner">
 							<h2>Contact</h2>
 							<div class="split style1">
