abstract submission closed

--- a/index.html
+++ b/index.html
@@ -228,10 +228,12 @@
 					<!-- Abstract Submission/Registration -->
 					<section id="submit" class="wrapper style4 fade-up">
 						<div class="inner">
-							<h2>Abstract Submission is open!</h2>
+							<h2>Abstract Submission is closed!</h2>
                             <hr>
-							<p>Please submit a title and abstract of your talk at <a href="https://www.dur.ac.uk/event.durham/eventmanagement/abstracts/smallgalaxies/">this link</a>
+							<p>The conference programme will be announced shortly.
 							</p>
+							<!--<p>Please submit a title and abstract of your talk at <a href="https://www.dur.ac.uk/event.durham/eventmanagement/abstracts/smallgalaxies/">this link</a>
+							</p> -->
 						</div>
 					</section>
 
