update programme announcement

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 										<td>Pre-registration and abstract submission closes</td>
 									</tr>
 									<tr>
-										<td style="text-align: center;">20th April 2019</td>
+										<td style="text-align: center;">1st May 2019</td>
 										<td>Programme announcement, early-bird registration opens</td>
 									</tr>
 									<tr>
