--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 								</section>
 								<section>
 									<span class="icon major fa-beer"></span>
-									<h3>Eating ouut</h3>
+									<h3>Eating out</h3>
 									<p>Durham has a wide range of restaurants and cafes around town.
 										If you'd like some ideas on where to go to eat, we've listed a
 										selection of the options within walking distance of the Physics
