--- a/index.html
+++ b/index.html
@@ -112,6 +112,27 @@
 								</div>
 							</div>
 						</section>
+						<section>
+							<a href="#" class="image"><img src="images/OCW-sign.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Local Organising Committee</h2>
+									<p><a href="https://www.dur.ac.uk/physics/staff/profiles/?username=zpsb48">Marius Cautun</a><br>
+                                        <a href="https://www.dur.ac.uk/physics/staff/profiles/?username=zlzt76">Azadeh Fattahi</a><br>
+                                        <a href="https://www.dur.ac.uk/physics/staff/profiles/?username=dbvf32">Anna Genina</a><br>
+                                        <a href="http://community.dur.ac.uk/simon.morris/">Simon Morris</a><br>
+                                        <a href="http://community.dur.ac.uk/oliver.j.newton/">Oliver Newton</a><br>
+                                        <a href="https://community.dur.ac.uk/andrew.robertson/">Andrew Robertson</a><br>
+                                        <a href="https://www.dur.ac.uk/physics/staff/profiles/?username=dfrt64">Shi Shao</a><br>
+                                        <a href="https://www.dur.ac.uk/physics/staff/profiles/?username=hrzc75">Calvin Sykes</a><br>
+                                        <a href="http://icc.dur.ac.uk/~tt/">Tom Theuns</a><br>
+										<a href="https://www.dur.ac.uk/physics/staff/profiles/?username=bdmc17">Louise Welsh</a></p>
+<!--									<ul class="actions">
+										<li><a href="#" class="button">Learn more</a></li>
+									</ul> -->
+								</div>
+							</div>
+						</section>
 					</section>
 
 					<!-- Code of Conduct -->
