--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
 							highlight the principle open issues, and to discuss the future observational and theoretical advances that are needed
 							to make progress.
 							Contributions will be in the form of long and short presentations, as well as active discussion sessions.</p>
+                            <hr>
+                            <p><a href="images/SGCQ_poster.png">Click here</a> to download the conference poster!
 						</div>
 					</section>
 
