--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
 						<div class="inner">
 							<h2>Things to do in Durham (and places to stay)</h2>
 							<!-- <p>Durham has plenty to offer.</p>-->
+							<!--
 							<h3>Wednesday Social Activities</h3>
 							<p>We have planned some fun activities for Wednesday afternoon,
 								ranging from a stroll through Durham city to basketball/volleyball
@@ -283,7 +284,20 @@
 								see  the cathedral
 								<a href='https://www.durhamcathedral.co.uk/whatson/magnacartaforestcharters'>website</a>.
                             </p>
+                            -->
                             <h3>Kids & Childcare </h3>
+                            <p>For those bringing family and children with them to Durham during the
+                                conference, we will provide a list of entertainment suggestions shortly.<br>
+                                For under-5's we've contacted a local nursery
+                                (<a href="http://www.steppingstonesdurham.com">Stepping Stones</a>)
+                                who are able to take a small number of extra children during the conference.
+                                This will need to be arranged well in advance of the conference, so if you
+                                would like to discuss this further, please contact
+                                <a href="mailto:alis.j.deason@durham.ac.uk">alis.j.deason@durham.ac.uk</a>.
+                                Alternatively, you can find a list of registered local childcare professionals
+                                at the Durham County Council <a href="http://www.countydurhamfamilies.info/kb5/durham/fsd/results.action?familychannel=5055650&districts=0">Families Information Service</a>.
+                            </p>
+<!--
                             <p>For those bringing kids to Durham during the conference,
                                 there are suggestions of where to keep kids entertained on
                                 the <a href='activities.html'>Things to do page</a>.<br>
@@ -295,6 +309,7 @@
                                 Alternatively, you can find a list of registered local childcare professionals
                                 at the Durham County Council <a href="http://www.countydurhamfamilies.info/kb5/durham/fsd/results.action?familychannel=5055650&districts=0">Families Information Service</a>.
                             </p>
+-->
 							<div class="features">
 								<section>
 									<span class="icon major fa-university"></span>
