--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
 										Rochester Building (Physics Department), on the Durham University
 										Science site. The nearest airport is Newcastle Airport (about
 										40min-1hr by taxi) and the nearest train station is in Durham
-										City centre (25 min walk or a 5 min taxi ride). For more
-										information, see <a href='ArrivalInformation.pdf'>here</a>.
+										City centre (25 min walk or a 5 min taxi ride).
+                                        <!-- For more information, see <a href='ArrivalInformation.pdf'>here</a>. -->
 									</p>
 								</section>
 								<section>
