--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<li><a href="#code">Code of Conduct</a></li>
 							<li><a href="#dates">Important dates</a></li>
 							<li><a href="#delegates">Confirmed Participants</a></li>
-							<li><a href="#submit">Abstract Submission</a></li>
+							<li><a href="#submit">Registration</a></li>
 							<li><a href="#logistics">Logistics</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
@@ -252,12 +252,12 @@
 					<!-- Abstract Submission/Registration -->
 					<section id="submit" class="wrapper style4 fade-up">
 						<div class="inner">
-							<h2>Abstract Submission is closed!</h2>
+							<h2>Registration is open!</h2>
                             <hr>
-							<p>The conference programme will be announced shortly.
+							<p>The conference programme will be announced shortly - thanks for your patience!
 							</p>
-							<!--<p>Please submit a title and abstract of your talk at <a href="https://www.dur.ac.uk/event.durham/eventmanagement/abstracts/smallgalaxies/">this link</a>
-							</p> -->
+							<p>Please register at <a href="https://www.dur.ac.uk/conference.booking/details/?id=1241">this link</a>
+							</p>
 						</div>
 					</section>
 
