--- a/index.html
+++ b/index.html
@@ -197,11 +197,7 @@
 									</tr>
 									<tr>
 										<td style="text-align: center;">1st May 2019</td>
-										<td>Programme announcement, early-bird registration opens</td>
-									</tr>
-									<tr>
-										<td style="text-align: center;">20th May 2019</td>
-										<td>Early-bird registration closes</td>
+										<td>Programme announcement, registration opens</td>
 									</tr>
 									<tr>
 										<td style="text-align: center;">15th June 2019</td>
