replace OCW acronym

--- a/accom.html
+++ b/accom.html
@@ -47,7 +47,7 @@
 									<span class="icon major fa-hotel"></span>
                                     <b>Hatfield College, Durham University</b><br>
 									<a href='https://goo.gl/maps/7WQgfAtGAP52'><i>Location</i></a><br>
-									Approx walk to OCW: 15 mins; Town: 5 mins.
+									Approx walk to Conference: 15 mins; Town: 5 mins.
 								</section>
 							</div>
 						</div>
@@ -66,7 +66,7 @@
 										86 Hallgarth St, Durham, DH1 3AS<br>
 										Tel: +44 191 386 5269<br>
 										<a href='https://goo.gl/maps/ggDtmcCdWM12'><i>Location</i></a><br>
-										Approx walk to OCW: 10 mins; Town: 10 mins.
+										Approx walk to Conference: 10 mins; Town: 10 mins.
 									</section>
 									<section>
 										<span class="icon major fa-hotel"></span>
@@ -74,7 +74,7 @@
 										Old Elvet, Durham, DH1 3JN<br>
 										Tel: +44 191 386 6821<br>
 										<a href='https://goo.gl/maps/XjnSFCjYwmF2'><i>Location</i></a><br>
-										Approx walk to OCW: 15 mins; Town: 5 mins.
+										Approx walk to Conference: 15 mins; Town: 5 mins.
 									</section>
 									<section>
 										<span class="icon major fa-hotel"></span>
@@ -82,7 +82,7 @@
 										Old Elvet, Durham, DH1 3HL<br>
 										Tel: +44 191 329 3535<br>
 										<a href='https://goo.gl/maps/KWBJUAGTfs12'><i>Location</i></a><br>
-										Approx walk to OCW: 15 mins; Town: 5 mins.
+										Approx walk to Conference: 15 mins; Town: 5 mins.
 									</section>
 									<section>
 										<span class="icon major fa-hotel"></span>
@@ -90,7 +90,7 @@
 										Frankland Lane, Durham, DH1 5TA<br>
 										Tel: +44 191 372 7200<br>
 										<a href='https://goo.gl/maps/p9TZjR93Eep'><i>Location</i></a><br>
-										Approx walk to OCW: 20 mins; Town: 5 mins.
+										Approx walk to Conference: 20 mins; Town: 5 mins.
 									</section>
 									<section>
 										<span class="icon major fa-hotel"></span>
@@ -98,7 +98,7 @@
 										Freemans Place, Durham, DH1 1SQ<br>
 										Tel: +44 191 372 7200<br>
 										<a href='https://goo.gl/maps/wV2uRyFZwP92'><i>Location</i></a><br>
-										Approx walk to OCW: 20 mins; Town: 5 mins.
+										Approx walk to Conference: 20 mins; Town: 5 mins.
 									</section>
 									<section>
 										<span class="icon major fa-hotel"></span>
@@ -106,7 +106,7 @@
 										Waddington St, Flass Vale, Durham, DH1 4BG<br>
 										Tel: +44 191 370 9977<br>
 										<a href='https://goo.gl/maps/CCdzoC3XEBG2'><i>Location</i></a><br>
-										Approx walk to OCW: 25 mins; Town: 10 mins.
+										Approx walk to Conference: 25 mins; Town: 10 mins.
 									</section>
 									<section>
 										<span class="icon major fa-hotel"></span>
@@ -114,7 +114,7 @@
 										The Avenue, Durham, DH1 4DX<br>
 										Tel: +44 191 375 0011<br>
 										<a href='https://goo.gl/maps/YjsjcXr2nGv'><i>Location</i></a><br>
-										Approx walk to OCW: 25 mins; Town: 15 mins.
+										Approx walk to Conference: 25 mins; Town: 15 mins.
 									</section>
 									<section>
 										<span class="icon major fa-hotel"></span>
@@ -122,7 +122,7 @@
 										Framwellgate Peth, Durham, DH1 4NQ<br>
 										Tel: +44 191 386 3395<br>
 										<a href='https://goo.gl/maps/Rhwsm3e1zYz'><i>Location</i></a><br>
-										Approx walk to OCW: 30 mins; Town: 15 mins.
+										Approx walk to Conference: 30 mins; Town: 15 mins.
 									</section>
 								</div>
 						</div>
