--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 									</tr>
 									<tr>
 										<td style="text-align: center;">1st May 2019</td>
-										<td>Programme announcement, registration opens</td>
+										<td>Registration opens</td>
 									</tr>
 									<tr>
 										<td style="text-align: center;">15th June 2019</td>
