--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                                     Evan Kirby (S)<br>
                                     Michelle Collins (L)<br>
                                     Anna Wright (S)<br>
-                                    Aaron Romanowsky (S)<br>
+                                    Jean Brodie (S)<br>
                                     Poster FLASH presentations<br>
                                 </section>
                                 <section>
