--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                                 <section>
                                     <b>Session 8: 16:00 - 17:00</b><br>
                                     Chair: TBD<br>
-                                    Carlo Nipoti (S)<br>
+                                    Raffaele Pascale (S)<br>
                                     Isabel M. E. Santos-Santos (S)<br>
                                     Kyle Oman (S)<br>
                                     Giuliano Iorio (S)<br>
@@ -453,7 +453,7 @@
                                         Marius Cautun (S)<br>
                                         Nico Garavito-Camargo (S)<br>
                                         Christine Simpson (S)<br>
-                                        Ana Bonaca (S)<br>
+                                        Ana Bonaca (L)<br>
                                         Denis Erkal (S)<br>
                                         Nora Shipp (S)<br>
                                     </section>
