--- a/index.html
+++ b/index.html
@@ -320,7 +320,6 @@
                                     Evan Kirby (S)<br>
                                     Michelle Collins (L)<br>
                                     Anna Wright (S)<br>
-                                    Jean Brodie (S)<br>
                                     Poster FLASH presentations<br>
                                 </section>
                                 <section>
@@ -401,16 +400,16 @@
                                     Discussion<br>
                                     Adam Smercina (S)<br>
                                     Sabrina Stierwalt (S)<br>
+                                    Ana Hidalgo-Gamez (S)<br>
                                     Francesca Annibali (S)<br>
-                                    Clare Higgs (S)<br>
                                 </section>
                                 <section>
                                     <b>Session 12: 11:00 - 12:35</b><br>
                                     Chair: TBD<br>
+                                    Clare Higgs (S)<br>
                                     Betsey Adams (S)<br>
                                     Erik Tollerud (S)<br>
                                     Sownak Bose (L)<br>
-                                    Pascal Elahi (S)<br>
                                     Dan Weisz (L)<br>
                                 </section>
                             </div>
@@ -478,11 +477,9 @@
 					<!-- Abstract Submission/Registration -->
 					<section id="submit" class="wrapper style4 fade-up">
 						<div class="inner">
-							<h2>Registration is open!</h2>
+							<h2>Registration is closed!</h2>
                             <hr>
-							<p>The conference programme will be announced shortly - thanks for your patience!
-							</p>
-							<p>Please register at <a href="https://www.dur.ac.uk/conference.booking/details/?id=1241">this link</a>
+							<p>The conference abstract booklet will be announced shortly - thanks for your patience!
 							</p>
 						</div>
 					</section>
@@ -513,12 +510,8 @@
                             -->
                             <h3>Kids & Childcare </h3>
                             <p>For those bringing family and children with them to Durham during the
-                                conference, we will provide a list of entertainment suggestions shortly.<br>
-                                For under-5's we've contacted a local nursery
-                                (<a href="http://www.steppingstonesdurham.com">Stepping Stones</a>)
-                                who are able to take a small number of extra children during the conference.
-                                This will need to be arranged well in advance of the conference, so if you
-                                would like to discuss this further, please contact
+                                conference, a list of entertainment suggestions are provided on the "Things to do" tab below.<br>
+                                If you would like to know more about childcare options, please contact
                                 <a href="mailto:alis.j.deason@durham.ac.uk">alis.j.deason@durham.ac.uk</a>.
                                 Alternatively, you can find a list of registered local childcare professionals
                                 at the Durham County Council <a href="http://www.countydurhamfamilies.info/kb5/durham/fsd/results.action?familychannel=5055650&districts=0">Families Information Service</a>.
