--- a/eatingout.html
+++ b/eatingout.html
@@ -35,6 +35,7 @@
 						<nav>
 							<ul>
 								<li><a href="index.html">Home</a></li>
+								<li><a href="#confdinn">Conference Dinner</a></li>
 								<li><a href="#british">British Cuisine</a></li>
 								<!--<li><a href="#French">French</a></li>-->
 								<li><a href="#Mediterranean">Mediterranean</a></li>
@@ -60,7 +61,40 @@
 							<a href='restaurants.pdf'>here (coming soon!)</a> for a pdf version.</p>
 				</div>
 			</section>
-			<section id="british" class="wrapper style1">
+			<section id="confdinn" class="wrapper style1">
+				<div class="inner">
+					<h2>Conference Dinner</h2>
+						<div class="features">
+							<section>
+								<span class="icon major fa-cutlery"></span>
+								<b>Menu</b><br>
+								<b>Starter:</b><br>
+								Welsh rarebit and Gruyere tart with spring onion, rocket and grain mustard dressing<br>
+								<b>Main Course:</b><br>
+								Pan seared breast of chicken with fondant potato, squash purée, roast parsnip and chicken jus<br>
+								<b>Vegetarian Main Course:</b><br>
+								Provençale vegetable tian with fondant potato, pimento purée, baby courgette and black olive crumb<br>
+								<b>Dessert:</b><br>
+								Chocolate and salted caramel torte with malted milk ice cream and chocolate crisp<br>
+							</section>
+							<section>
+								<span class="icon major fa-cutlery"></span>
+								<b>Chilren's Menu</b> (£14 per child)<br>
+								(Children under 5 years of age eat free)<br>
+								<b>Starter:</b><br>
+								Fingers of honeydew melon with orange sorbet<br>
+								<b>Main Course:</b><br>
+								Spaghetti with bolognaise sauce<br>
+								<b>Vegetarian Main Course:</b><br>
+								Vegetarian Main Course: Spaghetti with tomato and herb sauce<br>
+								<b>Dessert:</b><br>
+								Ice cream<br>
+							</section>
+
+						</div>
+					</div>
+				</section>
+			<section id="british" class="wrapper style2">
 				<div class="inner">
 					<h2>Pub food & British Cuisine</h2>
 						<div class="features">
