full participant list

--- a/index.html
+++ b/index.html
@@ -221,27 +221,140 @@
 							<div class="split style2">
 								<!-- First column -->
 								<section>
-									<li>Giuseppina Battaglia (Instituto de Astrofisica de Canarias)
-									<li>Vasily Belokurov (IoA, University of Cambridge)
-									<li>Ana Bonaca (CfA, Harvard University)
-									<li>Sownak Bose (CfA, Harvard University)
+									<li>Betsey Adams (ASTRON)
+									<li>Francesca Annibali (INAF-OAS Bologna)
+									<li>Giuseppina Battaglia (IAC, Tenerife)
+									<li>Luca Beale (University of Virginia)
+									<li>Vasily Belokurov (Institute of Astronomy)
+									<li>Alejandro Benitez-LLambay (Durham University)
+									<li>Paul Bennet (Texas Tech University)
+									<li>Danielle Berg (The Ohio State University)
+									<li>Gurtina Besla (U. Arizona)
+									<li>Ana Bonaca (Harvard)
+									<li>Sownak Bose (Harvard University)
 									<li>Alyson Brooks (Rutgers University)
+									<li>James Bullock (University of California, Irvine)
+									<li>Marius Cautun (Leiden Observatory, Leiden University)
+									<li>Katie Chamberlain (University of Arizona)
+									<li>Laura Chang (Princeton University)
+									<li>Emma Chapman (Imperial College London)
+									<li>Anirudh Chiti (MIT)
+									<li>Nelvy Choque-Challapa (University of Groningen)
+									<li>Michelle Collins (University of Surrey)
+									<li>Ryan Cooke (Durham University)
+									<li>Aoife Curran (Durham University)
+									<li>Richard D Souza (Vatican Observatory)
+									<li>Michele De Leo (University of Surrey)
+									<li>Alis Deason (Durham University)
+									<li>Andres del Pino (Space Telescope Science Institute)
+									<li>Dhruba Dutta Chowdhury (Yale University)
+									<li>F. Sara Eftekhari (Kapteyn Astronomical Institute, University of Groningen, The Netherlands)
+									<li>Kareem El-Badry (UC Berkeley)
+									<li>Lydia Elias (University of California, Riverside)
+									<li>Christoph Engler (Zentrum für Astronomie der Universität Heidelberg &amp; Max-Planck-Institut für Astronomie)
 									<li>Dawn Erb (University of Wisconsin-Milwaukee)
-									<li>Anna Frebel (MIT)
+									<li>Denis Erkal (University of Surrey)
+									<li>Raphael Errani (University of Edinburgh)
+									<li>Ivanna Escala (Caltech)
+									<li>Azadeh Fattahi (Durham University)
+									<li>Annette Ferguson (Institute for Astronomy, University of Edinburgh)
+									<li>Catherine Fielder (University of Pittsburgh)
+									<li>Anna Frebel (Massachusetts Institute of Technology)
+									<li>Carlos Frenk (Durham University)
+									<li>Tobias Fritz (Instituto de Astrofisica de Canarias)
+									<li>Michele Fumagalli (Durham University)
+									<li>Juan Nicolas Garavito Camargo (University of Arizona)
 									<li>Marla Geha (Yale University)
-									<li>Alex Ji (Carnegie Observatories)
+									<li>Anna Genina (Durham University)
+									<li>Andrew Graus (University of Texas at Austin)
+									<li>Alexandra Gregory (University of Surrey)
+									<li>Wojciech Hellwing (Center for Theoretical Physics of PAS, Warsaw)
+									<li>Ana M. Hidalgo-Gamez (ESFM-IPN)
+									<li>Clare Higgs (University of Victoria)
+									<li>Jessie Hirtenstein (University of California, Davis)
+									<li>Tiffany Hsyu (UC Santa Cruz)
+									<li>Leopoldo Infante (Carnegie Institution for Science, Las Campanas Observatory)
+									<li>Giuliano Iorio (Institute of Astronomy, University of Cambridge)
+									<li>Bethan James (STScI)
+									<li>Adrian Jenkins (Durham University)
+									<li>Myoungwon Jeon (Kyung Hee University)
+									<li>Alexander Ji (Carnegie Observatories)
+									<li>Nitya Kallivayalil (University of Virginia)
+									<li>Marios Karouzos (Nature Astronomy)
+									<li>Ashley Kelly (Durham University)
+									<li>Stacy Kim (The Ohio State University)
+									<li>Evan Kirby (Caltech Department of Astronomy &amp; Astrophysics)
+									<li>Sophie Koudmani (IoA, University of Cambridge)
+									<li>Nimisha Kumari (University of Cambridge)
+									<li>Peter Kurczynski (US National Science Foundation)
 								</section>
 								<!-- Second column -->
 								<section>
-									<li>Nitya Kallivayalil (University of Virginia)
+									<li>Cedric Lacey (Durham University)
+									<li>Chervin Laporte (UVic/CITA)
+									<li>Geraint Lewis (The University of Sydney)
+									<li>Zhaozhou Li (Shanghai Jiao Tong University)
+									<li>Nicolas Longeard (Observatoire Astronomique de Strasbourg)
+									<li>Mark Lovell (Durham University)
+									<li>Aaron Ludlow (ICRAR/UWA)
+									<li>Christina Manzano-King (University of California Riverside)
+									<li>Giorgio Manzoni (Durham University)
+									<li>Pol Massana (University of Surrey)
+									<li>Davide Massari (University of Bologna)
+									<li>Kristen McQuinn (Rutgers University)
+									<li>Simon Morris (Durham University)
+									<li>Oliver Newton (Durham University)
+									<li>Anna Nierenberg (Jet Propulsion Laboratory)
+									<li>Kyle Oman (Kapteyn Institute)
+									<li>Matthew Orkney (University of Surrey)
+									<li>Raffaele Pascale (University of Bologna - DIFA (Department of Physics and Astrophysics))
+									<li>Ekta Patel (University of Arizona)
+									<li>Sanjaya Paudel (Yonsei University)
+									<li>Marcel Pawlowski (Leibniz-Institute for Astrophysics Potsdam)
+									<li>Reynier Peletier (University of Groningen)
+									<li>Andrew Pontzen (UCL)
+									<li>Rhys Poulton (ICRAR)
+									<li>Janet Preston (University of Surrey)
+									<li>Ragadeepika Pucha (University of Arizona)
+									<li>Justin Read (University of Surrey)
+									<li>John Regan (Dublin City University)
+									<li>Martin Rey (University College London)
+									<li>Alexander Riley (Texas A&amp;M University)
+									<li>Daniella Roberts (The Ohio State University)
+									<li>Andrew Robertson (Durham University)
+									<li>Ian Roederer (University of Michigan)
+									<li>Anton Rudakovskyi (Bogolyubov Institute for Theoretical Physics, Kiev, Ukraine)
+									<li>Elena Sacchi (Space Telescope Science Institute)
+									<li>Nathan Sandford (UC Berkeley)
+									<li>Isabel Santos Santos (University of Victoria)
+									<li>Shobita Satyapal (George Mason University)
 									<li>Claudia Scarlata (University of Minnesota)
-									<li>Dan Stark (The University of Arizona)
-									<li>Else Starkenburg (Leibniz-Institut fur Astrophysik Potsdam)
-									<li>Louis Strigari (Texas A&M University)
-									<li>Dan Weisz (University of California Berkeley)
-									<li>Andrew Wetzel (University of California Davis)
-									<li>John Wise (Georgia Institute of Technology)
-								</section>
+									<li>Shi Shao (Durham University)
+									<li>Nora Shipp (University of Chicago)
+									<li>Brian Siana (UC Riverside)
+									<li>Josh Simon (Carnegie Observatories)
+									<li>Christine Simpson (University of Chicago)
+									<li>Evan Skillman (University of Minnesota)
+									<li>Adam Smercina (University of Michigan)
+									<li>Matthew Smith (CCA, Flatiron Institute)
+									<li>Tony Sohn (Space Telescope Science Institute)
+									<li>Daniel Stark (University of Arizona)
+									<li>Else Starkenburg (Leibniz Institute for Astrophysics Potsdam (AIP))
+									<li>Sabrina Stierwalt (Occidental College)
+									<li>Martin Stref (University of Montpellier)
+									<li>Louis Strigari (Texas A&amp;M University)
+									<li>Calvin Sykes (Durham University)
+									<li>Salvatore Taibi (Instituto de Astrofisica de Canarias)
+									<li>Tom Theuns (Durham University)
+									<li>Guillaume Thomas (NRC Herzberg Astronomy &amp; Astrophysics)
+									<li>Erik Tollerud (Space Telescope Science Institute)
+									<li>Dan Weisz (UC Berkeley)
+									<li>Louise Welsh (Durham University)
+									<li>Andrew Wetzel (University of California, Davis)
+									<li>David Williamson (University of Southampton)
+									<li>John Wise (Georgia Tech)
+									<li>Anna Wright (Rutgers University)
+									<li>Zhen Yuan (Shanghai Astronomical Observatory, Chinese Academy of Sciences)								</section>
 							</div>
 						</div>
 					</section>
